--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-spring.application.name=helloworld
+spring.application.name=ProyectoProlog
+
+spring.profiles.active=prod
+spring.datasource.url=jdbc:postgresql://aws-0-us-west-1.pooler.supabase.com:6543/postgres
+spring.datasource.username=postgres.uwiwqxezcljhxfkqtsco
+spring.datasource.password=Paradigmas2024!
+#spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+logging.level.org.hibernate.SQL=DEBUG
+spring.datasource.hikari.data-source-properties.cachePrepStmts=false
+spring.datasource.hikari.data-source-properties.prepStmtCacheSize=0
+
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
