--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,11 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.5.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.jpl7</groupId>
+            <artifactId>jpl</artifactId>
+            <version>7.6.0</version>
+        </dependency>
     </dependencies>
 
     <build>
