--- a/pom.xml
+++ b/pom.xml
@@ -76,11 +76,6 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.5.0</version>
         </dependency>
-        <dependency>
-            <groupId>org.jpl7</groupId>
-            <artifactId>jpl</artifactId>
-            <version>7.6.0</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -96,6 +91,28 @@
                         </exclude>
                     </excludes>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>install-Transformation lib</id>
+                        <phase>clean</phase>
+                        <configuration>
+                            <file>${basedir}/dependencies/jpl.jar</file>
+                            <repositoryLayout>default</repositoryLayout>
+                            <groupId>org.paytm</groupId>
+                            <artifactId>paytmchecksum</artifactId>
+                            <version>1.0</version>
+                            <packaging>jar</packaging>
+                            <generatePom>true</generatePom>
+                        </configuration>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
